# nyc-taxi-streaming-pipeline

./: .gitignore  Dockerfile  README.md  consumer.py  docker-compose.yml  processor_manual.py  producer.py  pyproject.toml  requirements.txt
